# mri-classifier

./: .gitignore  README.md  pyproject.toml
mri_classifier/: mri_classifier.ipynb
