[tool.poetry]
name = "mri-classifier"
version = "0.1.0"
description = ""
authors = ["Samuel Halstead <worksam1114@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
tensorflow = "^2.20.0"
ipython = "^9.6.0"
scikit-learn = "^1.7.2"
opencv-python = "^4.12.0.88"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
